# Blasteroids---CSCI-261-Final-Project

./: Alien.cpp  Alien.h  Asteroid.cpp  Asteroid.h  CMakeLists.txt  Funcs.cpp  Funcs.h  Laser.cpp  Laser.h  Player.cpp  Player.h  README.txt  main.cpp  scores.txt
assetsForBuiltProject/: scores.txt
